--- a/app/views/vibes/show.html.erb
+++ b/app/views/vibes/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="show-page-div">
+<div class="vibe-show-page-div">
   <h1 class="vibe-name"><%= @vibe.name %></h1>
   <h2>
     <%= link_to @user.username, user_path(@user), :class => "vibe-user", :id => "show-page-vibe-name" %>
