--- a/app/views/vibes/show.html.erb
+++ b/app/views/vibes/show.html.erb
@@ -1,7 +1,7 @@
 <div class="show-page">
 
   <div class="vibe-show-page-div columns small-12">
-    <%= image_tag(@vibe.art.url, class: "vibe-art small-3 right ") %>
+    <%= image_tag(@vibe.art.url, class: "vibe-art small-3 center ") %>
     <div class="song-info small-6 left">
       <h1 class="vibe-name"><%= @vibe.name %></h1>
       <h2>
