--- a/app/assets/stylesheets/audio.css
+++ b/app/assets/stylesheets/audio.css
@@ -79,6 +79,11 @@
   background-position: 0px -70px;
 }
 
+.visualizer {
+  margin-top: 15rem;
+  transform: rotate(90deg);
+}
+
 @-webkit-keyframes Spin-CW {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
