finally got progress bar working

--- a/app/assets/stylesheets/progress_bar.scss
+++ b/app/assets/stylesheets/progress_bar.scss
@@ -1,5 +1,6 @@
 #container {
-  margin: 200px;
+  // margin-top: 550px;
+  margin-right: 40%;
   width: 400px;
   height: 8px;
   transform: rotate(90deg);
