fixed setup of all devise views

--- a/app/assets/stylesheets/show_vibe.scss
+++ b/app/assets/stylesheets/show_vibe.scss
@@ -119,6 +119,7 @@
   background-color: #ed1eed;
   color: white;
   box-shadow: 5px 10px aquamarine;
+  text-decoration: none;
 }
 
 .dropzone-section {
