--- a/app/views/vibes/index.html.erb
+++ b/app/views/vibes/index.html.erb
@@ -1,12 +1,12 @@
 
 <div id="waviest-vibes-div small-12 columns">
-  <h1 id="waviest-vibes-title" class="text-center small-4 left column">chill</h1>
-  <h1 id="waviest-vibes-title" class="text-center small-4 center column">waviest</h1>
-  <h1 id="waviest-vibes-title" class="text-center small-4 right coumn">fire</h1>
+  <!-- <h1 id="waviest-vibes-title" class="text-center small-4 left column">chill</h1> -->
+  <h1 id="waviest-vibes-title" class="text-center small-12 center column">waviest vibes</h1>
+  <!-- <h1 id="waviest-vibes-title" class="text-center small-4 right coumn">fire</h1> -->
 </div>
 
 <div class-"small-12 columns">
-
+<!--
   <div id="chill-vibes-ul" class="text-center small-4 left column">
     <ul>
       <% @chillVibes.each do |vibe| %>
@@ -26,9 +26,9 @@
         </li>
       <% end %>
     </ul>
-  </div>
+  </div> -->
 
-    <div id="waviest-vibes-ul" class="text-center small-4 center column">
+    <div id="waviest-vibes-ul" class="text-center small-4 center">
       <ul>
         <% @waveyVibes.each do |vibe| %>
           <br>
@@ -48,7 +48,7 @@
         <% end %>
       </ul>
     </div>
-
+<!--
     <div id="fire-vibes-ul" class="text-center small-4 right column">
       <ul>
         <% @fireVibes.each do |vibe| %>
@@ -69,4 +69,4 @@
         <% end %>
       </ul>
     </div>
-</div>
+</div> -->
