--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -11,7 +11,8 @@ a.vibro-logo img {
 }
 
 a.vibro-logo img:hover {
-  filter: hue-rotate(90deg);
+  filter: hue-rotate(-10deg);
+  box-shadow: 5px 5px #ff00dc;
 }
 
 a.username {
@@ -29,6 +30,7 @@ ul#sign.right a {
 }
 
 ul#sign.right a:hover {
+  text-decoration: none;
   color: aquamarine;
 }
 
@@ -36,6 +38,7 @@ ul#sign.right a:hover {
   font-family: "Impact";
   letter-spacing: 5px;
   margin-top: 2rem;
+  margin-bottom: 2rem;
   animation-name: Pulsate;
   animation-duration: 3s;
   animation-iteration-count:infinite;
@@ -65,6 +68,7 @@ ul {
 #chill-vibes-ul,
 #fire-vibes-ul {
   text-align: center;
+  margin: auto;
 }
 
 .vibe-name {
@@ -77,6 +81,7 @@ ul {
   animation-name: Pulsatehover;
   animation-duration: .25s;
   animation-iteration-count: infinite;
+  text-decoration: none;
 }
 
 .vibe-user {
@@ -87,6 +92,7 @@ ul {
 
 .vibe-user:hover {
   color: #ff00dc;
+  text-decoration: none;
 }
 
 .vibe-blurb {
