--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,51 @@
-<h2>Sign up</h2>
+<h2 class="devise-title">sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name" %>
+    <%= f.label :first_name, :class => "label-text" %><br />
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name", :class => "input-text" %>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name"  %>
+    <%= f.label :last_name, :class => "label-text" %><br />
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name", :class => "input-text"  %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, :class => "label-text" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "input-text" %>
   </div>
 
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.label :username, :class => "label-text" %><br />
+    <%= f.text_field :username, :class => "input-text" %>
   </div>
 
   <div class="field">
-    <%= f.label :user_photo %><br />
-    <%= f.file_field :user_photo %>
+    <%= f.label :user_photo, :class => "label-text" %><br />
+    <%= f.file_field :user_photo, :class => "input-text" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, :class => "label-text" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", :class => "input-text" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, :class => "label-text" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "input-text" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :class => "devise-button" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="devise-links">
+  <%= render "devise/shared/links" %>
+</div>
