set up vibe form

--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -32,3 +32,23 @@
   margin-left: 1em;
   border: solid 5px aquamarine;
 }
+
+#user-vibes-list {
+
+}
+
+.user-vibes-list-item {
+  border-radius: 10%;
+  padding: 10px;
+  border: 2px solid aquamarine;
+  box-shadow: 5px 10px #ed1eed;
+}
+
+.fa-upload {
+  color: royalblue;
+}
+
+#new-vibe-text {
+  font-family: monospace;
+  color: #ed1eed;
+}
