--- a/app/assets/stylesheets/mix_form.scss
+++ b/app/assets/stylesheets/mix_form.scss
@@ -21,8 +21,7 @@
   text-shadow: 2.5px 2.5px aquamarine;
 }
 
-#mix-form-audio-file,
-#mix-form-art {
+#mix-form-audio-file {
   margin-left: 28%;
 }
 
