--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -34,18 +34,32 @@
 }
 
 #user-vibes-list {
-
+  text-align: center;
+  margin: auto;
 }
 
 .user-vibes-list-item {
   border-radius: 10%;
   padding: 10px;
-  border: 2px solid aquamarine;
+  border: 1px solid aquamarine;
   box-shadow: 5px 10px #ed1eed;
+  margin: 1rem;
 }
 
-.fa-upload {
+.user-vibes-list-item:hover {
+  border-radius: 20%;
+  padding: 5px;
+  border: 1px solid #ed1eed;
+  box-shadow: 5px 10px aquamarine;
+}
+
+.fa-upload,
+#tower-text {
   color: royalblue;
+}
+
+#tower-text {
+  font-family: monospace;
 }
 
 #new-vibe-text {
