added body background options to global.css

--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -44,10 +44,10 @@
   border: 1px solid aquamarine;
   box-shadow: 5px 10px #ed1eed;
   margin: 1rem;
+  background-color: white;
 }
 
 .user-vibes-list-item:hover {
-  border-radius: 11%;
   padding: 5px;
   border: 1px solid #ed1eed;
   box-shadow: 5px 10px aquamarine;
