added carousel to index and fixed bug in useer show

--- a/app/assets/stylesheets/show_vibe.scss
+++ b/app/assets/stylesheets/show_vibe.scss
@@ -99,7 +99,7 @@
   max-height: 400px;
   border-radius: 5%;
   margin-top: 1rem;
-  margin-right: 1rem;
+  // margin-right: 1rem;
   animation-name: BackForth;
   animation-delay: 5s;
   animation-duration: 10s;
