--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,8 +24,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :user_photo, :class => "label-text" %><br />
-    <%= f.file_field :user_photo, :class => "input-text" %>
+    <%= f.label :pro_pic, :class => "label-text" %><br />
+    <%= f.file_field :pro_pic, :class => "input-text" %>
   </div>
 
   <div class="field">
