--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -69,6 +69,32 @@ ul#sign.right a:hover {
   color: aquamarine;
 }
 
+#vibro-title {
+  text-align: center;
+  margin: auto;
+  font-size: 3rem;
+  color: blueviolet;
+  animation-name: Pulsate;
+  animation-duration: 1s;
+  animation-iteration-count:infinite;
+}
+
+#vibro-title:hover {
+  animation-name: Pulsatehover;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  text-decoration: none;
+}
+
+.carousel {
+  margin: auto;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+
+}
+
 #waviest-vibes-title {
   font-family: "Impact";
   letter-spacing: 5px;
@@ -95,15 +121,14 @@ ul {
 .vibe-blurb,
 .tower-text,
 .chill-text,
-.fire-text {
+.fire-text,
+#vibro-title {
   font-family: monospace;
 }
 
-#waviest-vibes-ul,
-#chill-vibes-ul,
-#fire-vibes-ul {
-  text-align: center;
-  margin: auto;
+#waviest-vibes-ul {
+  /* text-align: center; */
+  /* margin: auto; */
 }
 
 .vibe-name {
