--- a/app/views/vibes/index.html.erb
+++ b/app/views/vibes/index.html.erb
@@ -1,15 +1,16 @@
 
+<div id="vibro-title">featured vibes</div>
+
+<div id="app" class="small-10 medium-8 large-6 carousel"></div>
+
 <div id="waviest-vibes-div small-12 columns">
-  <!-- <h1 id="waviest-vibes-title" class="text-center small-4 left column">chill</h1> -->
-  <h1 id="waviest-vibes-title" class="text-center small-12 center column">waviest vibes</h1>
-  <!-- <h1 id="waviest-vibes-title" class="text-center small-4 right coumn">fire</h1> -->
+  <h1 id="waviest-vibes-title" class="center column">waviest vibes</h1>
 </div>
 
-<div class-"small-12 columns">
-<!--
-  <div id="chill-vibes-ul" class="text-center small-4 left column">
+<div class-"small-12">
+  <div id="-vibes-ul" class="small-12">
     <ul>
-      <% @chillVibes.each do |vibe| %>
+      <% @waveyVibes.each do |vibe| %>
         <br>
         <li>
           <h2><%= link_to "#{vibe.name}",
@@ -19,54 +20,12 @@
                   user_path(vibe.user_id),
                   :class=>"vibe-user"%>
           </h2>
-          <i class="fas fa-snowflake"></i>
-          <span class="chill-text">
-            <%= vibe.ice %>
+          <i class="fas fa-broadcast-tower"></i>
+          <span class="tower-text">
+            <%= vibe.waves %>
           </span>
         </li>
       <% end %>
     </ul>
-  </div> -->
-
-    <div id="waviest-vibes-ul" class="text-center small-4 center">
-      <ul>
-        <% @waveyVibes.each do |vibe| %>
-          <br>
-          <li>
-            <h2><%= link_to "#{vibe.name}",
-                    vibe_path(vibe),
-                    :class=>"vibe-name" %>
-                <%= link_to "#{User.find(vibe.user_id).username}",
-                    user_path(vibe.user_id),
-                    :class=>"vibe-user"%>
-            </h2>
-            <i class="fas fa-broadcast-tower"></i>
-            <span class="tower-text">
-              <%= vibe.waves %>
-            </span>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-<!--
-    <div id="fire-vibes-ul" class="text-center small-4 right column">
-      <ul>
-        <% @fireVibes.each do |vibe| %>
-          <br>
-          <li>
-            <h2><%= link_to "#{vibe.name}",
-                    vibe_path(vibe),
-                    :class=>"vibe-name" %>
-                <%= link_to "#{User.find(vibe.user_id).username}",
-                    user_path(vibe.user_id),
-                    :class=>"vibe-user"%>
-            </h2>
-            <i class="fas fa-fire"></i>
-            <span class="fire-text">
-              <%= vibe.fire %>
-            </span>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-</div> -->
+  </div>
+</div>
