--- a/app/assets/stylesheets/progress_bar.scss
+++ b/app/assets/stylesheets/progress_bar.scss
@@ -1,8 +1,8 @@
 #container {
-  // margin-top: 550px;
-  margin-right: 40%;
-  width: 400px;
-  height: 8px;
+  margin-top: 220%;
+  // margin-right: 40%;
+  width: 100%;
+  height: 2%;
   transform: rotate(90deg);
 }
 
