--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><%= link_to image_tag('vibro-logo-with-background.jpg'), vibes_path, :class => "vibro-logo" %></h1>
+        <h1><%= link_to image_tag('vibro-logo-with-background.jpg'), root_path, :class => "vibro-logo" %></h1>
       </li>
     </ul>
 
