--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,14 +2,19 @@
 <div class="user-show-page-div">
   <div class="user-header small-12 row">
     <div class="user-photo-div small-12 medium-4 left">
-      <%= image_tag(@user.pro_pic.url, :class => "user-photo") %>
+      <% if @user.pro_pic.present? %>
+        <%= image_tag(@user.pro_pic.url, :class => "user-photo") %>
+      <% else %>
+        <%= image_tag("/app/assets/images/therest.gif", :class => "user-photo") %>
+      <% end %>
     </div>
     <div class="user-info small-12 medium-4 center">
       <h1 class="vibe-user" id="user-show-username"><%= @user.username %></h1>
       <h2 class="user-full-name"><%= @name %></h2>
       <h3 class="user-bio"><%= @user.bio %></h3>
     </div>
-      <% if current_user.id == params[:id].to_i %>
+      <% if current_user &&
+            current_user.id == params[:id].to_i %>
         <div id-"upload-vibe" class="small-12 medium-4 right">
           <i class="fas fa-upload"></i><br>
           <%= link_to "new vibe",
