--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>ViBRO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,6 +36,7 @@
           <li><%= link_to 'sign up', new_user_registration_path, :class => "sign-up" %></li>
           <li><%= link_to 'sign in', new_user_session_path, :class => "sign-in" %></li>
         <%- end -%>
+          <li id="hamburger"></li>
       </ul>
     </section>
   </nav>
