--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -14,6 +14,14 @@
   animation: none;
 }
 
+.carousel {
+  margin: auto;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+}
+
 #coverflow-outer {
   margin-top: 3rem;
   background-color: white;
