--- a/app/assets/stylesheets/show_user.scss
+++ b/app/assets/stylesheets/show_user.scss
@@ -53,6 +53,14 @@
   box-shadow: 5px 10px aquamarine;
 }
 
+.vibe-art-mini img {
+  height: 50%;
+  width: 50%;
+  border-radius: 5%;
+  border: 1px solid aquamarine;
+  box-shadow: 2px 2px #ed1eed;
+}
+
 .fa-upload,
 #tower-text {
   color: royalblue;
@@ -62,7 +70,25 @@
   font-family: monospace;
 }
 
+.fa-upload {
+  transform: scale(2);
+}
+
+#upload-vibe {
+  padding-top: 9rem;
+}
+
+#upload-vibe:hover {
+  animation-name: ChangecolorTransform;
+  animation-duration: .25s;
+  animation-iteration-count: infinite;
+}
+
 #new-vibe-text {
+  font-size: 2rem;
   font-family: monospace;
   color: #ed1eed;
+}
+#new-vibe-text:hover {
+  text-decoration: none;
 }
