--- a/app/views/vibes/show.html.erb
+++ b/app/views/vibes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="show-page">
+<!-- <div class="show-page">
   <div class="vibe-show-page-div row">
     <div class="song-info small-6 medium-6 columns">
       <h1 class="vibe-name"><%= @vibe.name %></h1>
@@ -18,7 +18,7 @@
       </div>
     </div>
     <%= image_tag(@vibe.art.url, class: "vibe-art small-6 medium-6 columns") %>
-  </div>
+  </div> -->
 
   <div id="app"></div>
 
