--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,11 +26,11 @@
         <span><%= link_to image_tag(vibe.art.url), vibe_path(vibe), :class => "vibe-art-mini" %></span>
       <div class="columns">
         <div class="fire-text">
-          <i class="fas fa-fire"></i>
+          <i class="fas fa-fire fire-icon"></i>
           <%= vibe.fire %>
         </div>
         <div class="chill-text">
-          <i class="fas fa-snowflake"></i>
+          <i class="fas fa-snowflake ice-icon"></i>
           <%= vibe.ice %>
         </div>
       </div>
