--- a/app/assets/stylesheets/vibe_show.scss
+++ b/app/assets/stylesheets/vibe_show.scss
@@ -311,6 +311,9 @@
 .vibe-show-error {
   color: #ed1eed;
   font-size: 1rem;
+  margin-top: 2rem;
+  border-radius: 45%;
+  animation: pulse 2s 1;
 }
 
 @-webkit-keyframes TwitchRotate {
