--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -1,29 +1,42 @@
-// @import "compass/css3";
-
-* {
-  box-sizing: border-box;
-}
 
 .search-list {
   width: 100%;
+  margin-top: 1rem;
   text-align: left;
   border-radius: 10px;
-  width: 12.5rem;
+  width: 15rem;
   position: absolute;
   z-index: 1;
-  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.2);
+  background-color: white;
+  box-shadow: 8px 6px 12px 6px rgba(0,0,0,0.2);
 }
 
-.search-list-li a {
+.search-list-li a, .search-list-li {
+  border-radius: 10px;
   text-decoration: none;
   color: blueviolet;
+  position: relative;
   z-index: 1;
-  margin-top: 0.2rem;
+  // margin-top: 0.2rem;
   display: block;
   background-color: white;
+  padding-left: 0.3rem;
 }
 .search-list-li a:hover {
   color: aquamarine;
+}
+
+.search-username {
+  color: #FF00FF;
+  margin-left: 0.2rem;
+  font-size: 0.5rem;
+  display: inline-block;
+}
+
+.search-divider {
+  padding-left: 0.4rem;
+  color: #476cff;
+  text-shadow: 2px 2px aquamarine;
 }
 
 button.btn {
