--- a/app/assets/stylesheets/vibe_show.scss
+++ b/app/assets/stylesheets/vibe_show.scss
@@ -178,9 +178,9 @@
 
 .feelin-fire,
 .feelin-ice {
-  margin: 1.5rem;
+  margin-top: 1.5rem;
   font-size: 2rem;
-  padding: 1rem;
+  padding: 0;
 }
 
 .feelin-fire {
