--- a/app/assets/stylesheets/vibe_show.scss
+++ b/app/assets/stylesheets/vibe_show.scss
@@ -9,8 +9,31 @@
 }
 
 .radio-button {
-  margin-left: 100rem;
-  margin-right: 5rem;
+  font-size: 1rem;
+  margin-left: 2rem;
+  display: inline-block;
+  color: #476cff;
+  border: 1px solid #ed1eed;
+  border-radius: 50%;
+  background-color: aquamarine;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  box-shadow: 2px 3px #ed1eed;
+}
+.radio-button:hover {
+  color: white;
+  border: 2px solid #ed1eed;
+  background-color: #00f6ff;
+  box-shadow: 2px 3px #476cff;
+}
+
+#mixes-label {
+  color: blueviolet;
+  font-size: 1.3rem;
+  text-align: center;
+  margin-bottom: 0.2rem;
+  display: inline;
+  text-shadow: 2px 3px #00f6ff;
 }
 
 #mix-num {
