--- a/app/assets/stylesheets/progress_bar.scss
+++ b/app/assets/stylesheets/progress_bar.scss
@@ -1,9 +1,63 @@
 #container {
-  margin-top: 200%;
-  // margin-right: 40%;
+  margin-top: 230%;
   width: 100%;
   height: 2%;
   transform: rotate(90deg);
+}
+
+.idea-icon {
+  transform: rotate(-90deg);
+}
+.idea-icon:hover {
+  transform: scale(2);
+  color: #ff00dc;
+  text-shadow: 2px 2px #80ffbf;
+  right: 3rem;
+}
+.idea-icon:active {
+  border: none;
+}
+
+.tippy-content {
+  color: blueviolet;
+  font-size: 1rem;
+}
+.tippy-content:hover {
+  color: #80ffbf;
+}
+
+.tippy-tooltip {
+  // border-radius: 20%;
+  // background-color: white;
+  // background-color: #ed1eed;
+  // border: 2px solid #80ffbf;
+  // padding: 2rem;
+  // margin-left: 10px;
+  padding: 0.5rem;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 4px 2px 8px 2px rgba(0,0,0,0.2);
+}
+.tippy-tooltip:hover {
+  color: #80ffbf;
+  background-image: url('arrow.png');
+}
+
+.click-me,
+.fa-mouse-pointer {
+  color: #ed1eed;
+  animation-name: Pulse;
+  animation-iteration-count: infinite;
+}
+
+.fa-mouse-pointer {
+  margin-top: 20.5rem;
+  margin-right: 5rem;
+  animation-duration: .25s;
+}
+
+.click-me {
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes Colorize {
