created modal and idea icons along prog bar BUG-prog bar not showing up

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -15,7 +15,7 @@
 .devise-title,
 .devise-links {
   text-align: center;
-  font-family: monospace;
+  font-family: Abril Fatface;
 }
 
 .devise-title {
