--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -54,7 +54,7 @@
 }
 
 #coverflow-inner {
-  font-family: monospace;
+  font-family: Abril Fatface;
   radius: 20%;
   animation: pulse 2s infinite;
 }
