--- a/app/assets/stylesheets/vibe_form.scss
+++ b/app/assets/stylesheets/vibe_form.scss
@@ -2,7 +2,7 @@
 #new-vibe-title,
 #first-mix-title {
   text-align: center;
-  font-family: monospace;
+  font-family: Abril Fatface;
 }
 
 #new-vibe-title,
