--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -89,7 +89,7 @@ $include-html-global-classes: $include-html-classes;
 // We use these to define default font stacks
 // $font-family-sans-serif: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
-// $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+// $font-family-Abril Fatface: Consolas, "Liberation Mono", Courier, Abril Fatface;
 
 // We use these to define default font weights
 // $font-weight-normal: normal;
@@ -259,7 +259,7 @@ $include-html-global-classes: $include-html-classes;
 
 // We use these to style <code> tags
 // $code-color: $oil;
-// $code-font-family: $font-family-monospace;
+// $code-font-family: $font-family-Abril Fatface;
 // $code-font-weight: $font-weight-normal;
 // $code-background-color: scale-color($secondary-color, $lightness: 70%);
 // $code-border-size: 1px;
@@ -792,7 +792,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-keystroke-classes: $include-html-classes;
 
 // We use these to control text styles.
-// $keystroke-font: "Consolas", "Menlo", "Courier", monospace;
+// $keystroke-font: "Consolas", "Menlo", "Courier", Abril Fatface;
 // $keystroke-font-size: inherit;
 // $keystroke-font-color: $jet;
 // $keystroke-font-color-alt: $white;
