--- a/app/assets/stylesheets/progress_bar.scss
+++ b/app/assets/stylesheets/progress_bar.scss
@@ -1,9 +1,16 @@
 #container {
-  margin-top: 230%;
-  width: 100%;
-  height: 2%;
   transform: rotate(90deg);
 }
+
+#container {
+  margin-top: 50%;
+  width: 100%;
+  height: 2%;
+}
+//
+// svg {
+//   margin-top: 1.3rem;
+// }
 
 .idea-icon {
   transform: rotate(-90deg);
@@ -27,12 +34,6 @@
 }
 
 .tippy-tooltip {
-  // border-radius: 20%;
-  // background-color: white;
-  // background-color: #ed1eed;
-  // border: 2px solid #80ffbf;
-  // padding: 2rem;
-  // margin-left: 10px;
   padding: 0.5rem;
   border-radius: 10px;
   background-color: white;
@@ -51,13 +52,64 @@
 }
 
 .fa-mouse-pointer {
-  margin-top: 20.5rem;
+  margin-top: 22rem;
   margin-right: 5rem;
   animation-duration: .25s;
 }
 
 .click-me {
+  font-family: 'Kreon';
   animation-duration: 2s;
+}
+
+#idea-user {
+  float: left;
+  margin-left: 1.5rem;
+  font-family: Abril Fatface;
+}
+
+#idea-user {
+  height: 25%;
+  width: 25%;
+  border-width: 2px;
+  box-shadow: 4px 2px 8px 2px rgba(0,0,0,0.2);
+}
+
+#idea-username {
+  color: blueviolet;
+}
+
+#idea-username {
+  font-size: 2rem;
+  text-align: center;
+  box-shadow: 4px 2px 8px 2px rgba(0,0,0,0.2);
+}
+
+#idea-title,
+#idea-description {
+  font-family: 'Kreon';
+  text-align: center;
+}
+
+#idea-title {
+  margin-top: 2rem;
+  text-align: center;
+  color: #ea5f2c;
+  font-size: 2rem;
+}
+
+#idea-description {
+  color: royalblue;
+  font-size: 1rem;
+  margin: 2rem;
+}
+
+#idea-title-row {
+  display: inline;
+}
+
+#idea-lightbulb {
+  margin: 3rem;
 }
 
 @-webkit-keyframes Colorize {
