--- a/app/views/vibes/index.html.erb
+++ b/app/views/vibes/index.html.erb
@@ -1,2 +1,4 @@
 
-<div id="app" class="small-10 medium-8 large-6 carousel"></div>
+<!-- <div id="app" class="small-10 medium-8 large-6 carousel"></div> -->
+
+<div id="app" />
