--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8,38 +8,14 @@
 @import url('https://fonts.googleapis.com/css?family=Spicy+Rice');
 @import url('https://fonts.googleapis.com/css?family=Kreon');
 
-body {
-  font-family: 'Spicy Rice';
-  background-color: white;
-  filter: saturate(1.5);
-  background-image:
-  radial-gradient(circle at 0% 0%,
-  white 1%,
-  aquamarine 2%,
-  aquamarine 3%,
-  white 4%,
-  white 5%,
-  aquamarine 6%,
-  aquamarine 7%,
-  white 8%,
-  white 9%,
-  aquamarine 10%,
-  aquamarine 11%,
-  white 12%,
-  white 13%,
-  aquamarine 14%,
-  aquamarine 15%,
-  white 16%,
-  white 17%,
-  aquamarine 18%,
-  aquamarine 19%,
-  white 20%,
-  white 21%,
-  aquamarine 22%,
-  aquamarine 23%,
-  transparent 10%,
-  transparent);
-  background-repeat: no-repeat;
+// body {
+//   background-color: black;
+// }
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+  max-width: none;
 }
 
 ul {
@@ -47,123 +23,164 @@ ul {
 }
 
 //
+// body {
+//   font-family: 'Kreon';
+// }
+
+// body {
+//   font-family: 'Spicy Rice';
+//   background-color: white;
+//   filter: saturate(1.5);
+//   background-image:
+//   radial-gradient(circle at 0% 0%,
+//   white 1%,
+//   aquamarine 2%,
+//   aquamarine 3%,
+//   white 4%,
+//   white 5%,
+//   aquamarine 6%,
+//   aquamarine 7%,
+//   white 8%,
+//   white 9%,
+//   aquamarine 10%,
+//   aquamarine 11%,
+//   white 12%,
+//   white 13%,
+//   aquamarine 14%,
+//   aquamarine 15%,
+//   white 16%,
+//   white 17%,
+//   aquamarine 18%,
+//   aquamarine 19%,
+//   white 20%,
+//   white 21%,
+//   aquamarine 22%,
+//   aquamarine 23%,
+//   transparent 10%,
+//   transparent);
+//   background-repeat: no-repeat;
+// }
+//
+
+//
+//
 // .top-bar-section {
 //   float: right;
 //   margin: auto;
 // }
-
-.top-bar {
-  background:rgba(0,0,0,0);
-  border-radius: 30px;
-  background-size: auto;
-  margin-top: 20px;
-  display: inline;
-}
-
-a.vibro-logo img {
-  filter: saturate(5);
-  height: 40px;
-  border-radius: 70px;
-  animation-name: ChangecolorTransform;
-  animation-delay: 60s;
-  animation-duration: 60s;
-  animation-iteration-count: infinite;
-}
-
-a.username {
-  border-radius: 15%;
-  background: transparent;
-}
-
-ul#sign.right {
-  display: inline-flex;
-  border-radius: 15%;
-  margin-right: 0.5rem;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-ul#sign.right li {
-  background: none;
-}
-
-ul#sign.right a {
-  background-color: white;
-  font-family: monospace;
-  color: blueviolet;
-}
-
-ul#sign.right a:hover {
-  text-decoration: none;
-  color: aquamarine;
-}
-
-#vibro-title {
-  text-align: center;
-  margin: auto;
-  font-size: 3rem;
-  color: blueviolet;
-  animation-name: Pulsate;
-  animation-duration: 1s;
-  animation-iteration-count:infinite;
-}
-
-#vibro-title:hover {
-  animation-name: Pulsatehover;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  text-decoration: none;
-}
-
-#waviest-vibes-title {
-  font-family: "Impact";
-  letter-spacing: 5px;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  animation-name: Pulsate;
-  animation-duration: 3s;
-  animation-iteration-count:infinite;
-}
-
-#waviest-vibes-title:hover {
-  animation-name: Pulsatehover;
-  animation-duration: 3s;
-  animation-iteration-count:infinite;
-}
-
-.vibe-name,
-.vibe-user,
-.vibe-blurb,
-.tower-text,
-.chill-text,
-.fire-text,
-#vibro-title {
-  font-family: 'Staatliches';
-}
-
-.vibe-blurb {
-  font-family: 'Kreon';
-}
-
-@-webkit-keyframes Pulsate {
-  from { color: #80ffbf; text-shadow: 2px 2px #ff00dc; }
-  1% { color: #ffb3ff; text-shadow: 2px 2px #80ffbf; }
-  2% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
-  90% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
-  90.5% { color: #ffb3ff; text-shadow: 2px 2px #80ffbf; }
-  91% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
-  to { color: #80ffbf; text-shadow: 2px 2px #ff00dc; }
-}
-
-@-webkit-keyframes ChangecolorTransform {
-  from { filter: hue-rotate(0deg); box-shadow: 2px 2px 2px 2px #ff00dc;}
-  10% { filter: hue-rotate(36deg);  box-shadow: 2px 2px 2px 2px #e7ff4c;}
-  20% { filter: hue-rotate(72deg);  box-shadow: 2px 2px 2px 2px #724cff;}
-  30% { filter: hue-rotate(108deg);  box-shadow: 2px 2px 2px 2px #fc2a00;}
-  40% { filter: hue-rotate(144deg);  box-shadow: 2px 2px 2px 2px #ffa8f3;}
-  50% { filter: hue-rotate(180deg);  box-shadow: 2px 2px 2px 2px #04fc00;}
-  60% { filter: hue-rotate(216deg);  box-shadow: 2px 2px 2px 2px #fc007e;}
-  70% { filter: hue-rotate(252deg);  box-shadow: 2px 2px 2px 2px #4300ff;}
-  80% { filter: hue-rotate(288deg);  box-shadow: 2px 2px 2px 2px #476cff;}
-  90% { filter: hue-rotate(324deg);  box-shadow: 2px 2px 2px 2px #00ffff;}
-  to { filter: hue-rotate(360deg); box-shadow: 2px 2px 2px 2px #ff00dc;}
-}
+//
+// .top-bar {
+//   background:rgba(0,0,0,0);
+//   border-radius: 30px;
+//   background-size: auto;
+//   margin-top: 20px;
+//   display: inline;
+// }
+//
+// a.vibro-logo img {
+//   filter: saturate(5);
+//   height: 40px;
+//   border-radius: 70px;
+//   animation-name: ChangecolorTransform;
+//   animation-delay: 60s;
+//   animation-duration: 60s;
+//   animation-iteration-count: infinite;
+// }
+//
+// a.username {
+//   border-radius: 15%;
+//   background: transparent;
+// }
+//
+// ul#sign.right {
+//   display: inline-flex;
+//   border-radius: 15%;
+//   margin-right: 0.5rem;
+//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+// }
+//
+// ul#sign.right li {
+//   background: none;
+// }
+//
+// ul#sign.right a {
+//   background-color: white;
+//   font-family: monospace;
+//   color: blueviolet;
+// }
+//
+// ul#sign.right a:hover {
+//   text-decoration: none;
+//   color: aquamarine;
+// }
+//
+// #vibro-title {
+//   text-align: center;
+//   margin: auto;
+//   font-size: 3rem;
+//   color: blueviolet;
+//   animation-name: Pulsate;
+//   animation-duration: 1s;
+//   animation-iteration-count:infinite;
+// }
+//
+// #vibro-title:hover {
+//   animation-name: Pulsatehover;
+//   animation-duration: 3s;
+//   animation-iteration-count: infinite;
+//   text-decoration: none;
+// }
+//
+// #waviest-vibes-title {
+//   font-family: "Impact";
+//   letter-spacing: 5px;
+//   margin-top: 2rem;
+//   margin-bottom: 2rem;
+//   animation-name: Pulsate;
+//   animation-duration: 3s;
+//   animation-iteration-count:infinite;
+// }
+//
+// #waviest-vibes-title:hover {
+//   animation-name: Pulsatehover;
+//   animation-duration: 3s;
+//   animation-iteration-count:infinite;
+// }
+//
+// .vibe-name,
+// .vibe-user,
+// .vibe-blurb,
+// .tower-text,
+// .chill-text,
+// .fire-text,
+// #vibro-title {
+//   font-family: 'Staatliches';
+// }
+//
+// .vibe-blurb {
+//   font-family: 'Kreon';
+// }
+//
+// @-webkit-keyframes Pulsate {
+//   from { color: #80ffbf; text-shadow: 2px 2px #ff00dc; }
+//   1% { color: #ffb3ff; text-shadow: 2px 2px #80ffbf; }
+//   2% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
+//   90% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
+//   90.5% { color: #ffb3ff; text-shadow: 2px 2px #80ffbf; }
+//   91% { color: #80ffbf; text-shadow: 2px 2px #ff00dc;}
+//   to { color: #80ffbf; text-shadow: 2px 2px #ff00dc; }
+// }
+//
+// @-webkit-keyframes ChangecolorTransform {
+//   from { filter: hue-rotate(0deg); box-shadow: 2px 2px 2px 2px #ff00dc;}
+//   10% { filter: hue-rotate(36deg);  box-shadow: 2px 2px 2px 2px #e7ff4c;}
+//   20% { filter: hue-rotate(72deg);  box-shadow: 2px 2px 2px 2px #724cff;}
+//   30% { filter: hue-rotate(108deg);  box-shadow: 2px 2px 2px 2px #fc2a00;}
+//   40% { filter: hue-rotate(144deg);  box-shadow: 2px 2px 2px 2px #ffa8f3;}
+//   50% { filter: hue-rotate(180deg);  box-shadow: 2px 2px 2px 2px #04fc00;}
+//   60% { filter: hue-rotate(216deg);  box-shadow: 2px 2px 2px 2px #fc007e;}
+//   70% { filter: hue-rotate(252deg);  box-shadow: 2px 2px 2px 2px #4300ff;}
+//   80% { filter: hue-rotate(288deg);  box-shadow: 2px 2px 2px 2px #476cff;}
+//   90% { filter: hue-rotate(324deg);  box-shadow: 2px 2px 2px 2px #00ffff;}
+//   to { filter: hue-rotate(360deg); box-shadow: 2px 2px 2px 2px #ff00dc;}
+// }
