--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -1,10 +1,18 @@
 
+#search-bar {
+  margin-top: 1rem;
+}
+
+.btn-search {
+  margin-top: 0.25rem;
+}
+
 .search-list {
   width: 100%;
   margin-top: 1rem;
   text-align: left;
   border-radius: 10px;
-  width: 15rem;
+  // width: 15rem;
   position: absolute;
   z-index: 1;
   background-color: white;
@@ -61,7 +69,7 @@ button.btn {
   // height: 50px;
   margin: 0 8%;
   position: relative;
-  width: 20%;
+  width: 50%;
   &.eleven,
   &.twelve {
     input {
@@ -75,7 +83,7 @@ button.btn {
             animation: jumpTowardSearch 1.2s linear;
             background: #FF00FF;
             color: #fff;
-            left: 172px;
+            left: 168px;
           }
           &.btn-reset {
             animation: jumpTowardReset 1.2s linear .4s;
@@ -90,7 +98,7 @@ button.btn {
         background: #00FF00;
         border-radius: 50%;
         height: 26px;
-        left: 92px;
+        // left: 92px;
         top: 2px;
         width: 26px;
       }
@@ -100,7 +108,7 @@ button.btn {
         border-radius: 50%;
         font-size: 10px;
         height: 20px;
-        left: 92px;
+        // left: 92px;
         line-height: 20px;
         padding: 0;
         top: 5px;
