--- a/app/assets/stylesheets/my-player.scss
+++ b/app/assets/stylesheets/my-player.scss
@@ -30,3 +30,16 @@
 .play-icon {
   transform: scale(2);
 }
+
+#index-page-vibe-reactions {
+  margin: auto;
+}
+
+.reaction-num {
+  margin: 0 1rem 0 0.1rem;
+}
+
+.fire,
+.ice {
+  margin-left: 2rem;
+}
